--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html> <!-- Informa ao navegador que este é um documento HTML5 -->
 <html lang="pt-BR"> <!-- Define o idioma da página como português do Brasil -->
+
     <meta charset="UTF-8"> <!-- Define a codificação de caracteres para suportar acentos e símbolos -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Torna a página responsiva em dispositivos móveis -->
     <meta name="description" content="AULATECH - Aulas particulares e de reforço de informática básica e avançada, Power BI, Marketing Digital e serviços especializados."> <!-- Descrição para aparecer em mecanismos de busca -->
     <link rel="stylesheet" href="css/style.css"> <!-- Importa o arquivo de estilo CSS -->
-    <link rel="icon" href="images/logo.png" type="image/png"> <!-- Define o ícone da aba do navegador (favicon) -->
+    <link rel="icon" href="images/logo.png" type="images/png"> <!-- Define o ícone da aba do navegador (favicon) -->
     <title>AulaTech - Curso de Tecnologia</title>
     <meta name="keywords" content="informática, curso, excel, power bi, tecnologia, AulaTech">
     <meta name="author" content="Seu Nome ou AulaTech">
     <meta name="robots" content="index, follow">
 
-</head>
+
 <body>
     <header> <!-- Cabeçalho do site -->
         <div class="container"> <!-- Container para centralizar o conteúdo -->
