--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="AULATECH - Aulas particulares e de reforço de informática básica e avançada, Power BI, Marketing Digital e serviços especializados."> <!-- Descrição para aparecer em mecanismos de busca -->
     <link rel="stylesheet" href="css/style.css"> <!-- Importa o arquivo de estilo CSS -->
     <link rel="icon" href="images/logo.png" type="images/png"> <!-- Define o ícone da aba do navegador (favicon) -->
-    <title>AulaTech - Treino de Tecnologia</title>
+    <title>AULATECH - Treino de Tecnologia</title>
     <meta name="keywords" content="informática, curso, excel, power bi, tecnologia, AulaTech">
     <meta name="author" content="Seu Nome ou AulaTech">
     <meta name="robots" content="index, follow">
