--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h2>Aprenda Informática e Domine Ferramentas Digitais no Seu Ritmo</h2> <!-- Chamada principal -->
         <p>Oferecemos aulas particulares, reforço e treinamentos de informática básica a avançada, além de serviços especializados em Excel e Power BI. Atendimento online e presencial, com foco em suas necessidades.</p> <!-- Descrição dos serviços -->
         <div class="cta-buttons"> <!-- Botões de chamada para ação -->
-            <a href="aulas-cursos.html" class="btn btn-primary">Conheça Nossos Cursos</a> <!-- Botão para página de cursos -->
+            <a href="aulas-cursos.html" class="btn btn-primary">Conheça Nossas Aulas</a> <!-- Botão para página de cursos -->
             <a href="servicos.html" class="btn btn-secondary">Solicite um Serviço</a> <!-- Botão para solicitar um serviço -->
         </div>
     </div>
