--- a/aulas-cursos.html
+++ b/aulas-cursos.html
@@ -37,7 +37,7 @@
 <!-- Dentro de <main> em aulas-cursos.html -->
 <section class="container section-padding page-title">
     <h2>Domine a Informática: Do Básico ao Avançado</h2>
-    <p>Oferecemos uma gama de aulas particulares e cursos para atender às suas necessidades específicas.</p>
+    <p>Oferecemos uma gama de aulas particulares e treinamentos para atender às suas necessidades específicas.</p>
 </section>
 
 <section class="container section-padding">
